[package]
name = "polybar-status"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "sync", "time"] }
x11rb = "0.13.2"
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
